--- a/themes/bootstrap3/templates/RecordTab/overdriveholdings.phtml
+++ b/themes/bootstrap3/templates/RecordTab/overdriveholdings.phtml
@@ -1,13 +1,13 @@
-<?php $access = $this->driver->getOverdriveAccess();?>
+<?php $access = $this->driver->getOverdriveAccess(); ?>
 <?php if ($access->code == 'od_account_noaccess'): ?>
   <div class="hold">
     <div class="alert alert-warning">
-      <?= $this->translate('od_code_contentnotavail') ?>
+      <?=$this->translate('od_code_contentnotavail')?>
     </div>
   </div>
 <?php elseif ($access->code == 'od_code_login_for_avail'): ?>
   <p class='alert-info'><strong>
-      <?= $this->transEsc('od_code_login_for_avail') ?>
+      <?=$this->transEsc('od_code_login_for_avail')?>
     </strong></p>
 <?php else:
   $od_id = $this->driver->getOverdriveID();
@@ -23,55 +23,55 @@
   <div class="internetDetails">
     <div class="odbrand pull-left media-left">
       <img
-        src=""<?=$this->imageLink('OverDrive_Logo_28x28_rgb.jpg')?>"">
+        src="<?=$this->imageLink('OverDrive_Logo_28x28_rgb.jpg')?>">
     </div>
     <h3>
-      <?= $this->transEsc('Online Access') ?>
+      <?=$this->transEsc('Online Access')?>
     </h3>
     <div class="availability">
       <p>
         <?php if ($avail->data->copiesAvailable > 0): ?>
           <span class="text-success">
-            <?= $this->icon('status-available', 'icon-link__icon') ?>
+            <?=$this->icon('status-available', 'icon-link__icon')?>
           </span>
         <?php else: ?>
           <span class="text-danger">
-            <?= $this->icon('status-unavailable', 'icon-link__icon') ?>
+            <?=$this->icon('status-unavailable', 'icon-link__icon')?>
           </span>
         <?php endif; ?>
 
-        <?php if (isset($avail->data->availabilityType) && $avail->data->availabilityType == 'AlwaysAvailable'): ?>
-          <?= $this->transEsc('od_unlimited') ?>
+        <?php if (($avail->data->availabilityType ?? 0) == 'AlwaysAvailable'): ?>
+          <?=$this->transEsc('od_unlimited')?>
         <?php else: ?>
-          <?= $avail->data->copiesAvailable . '/' . $avail->data->copiesOwned ?>
+          <?=$this->transEsc('od_copies_available', ['%%copies%%' => $avail->data->copiesAvailable . '/' . $avail->data->copiesOwned])?>
         <?php endif; ?>
-        <?= $this->transEsc('od_copies_available', ['%%copies%%' => $copies]) ?>
+
         <?php if ($avail->data->numberOfHolds > 0): ?>
-          <?= '; ' . $this->transEsc('od_waiting', ['holds' => $avail->data->numberOfHolds], null, true) ?>
+          <?='; ' . $this->transEsc('od_waiting', ['holds' => $avail->data->numberOfHolds], null, true)?>
         <?php endif; ?>
       </p>
 
       <?php if (!$checkedOut || $checkedOutResult->isMagazine): ?>
-        <?php if (isset($avail->data->copiesAvailable) && $avail->data->copiesAvailable > 0): ?>
+        <?php if (($avail->data->copiesAvailable ?? 0) > 0): ?>
           <p>
-            <a class="btn btn-primary checkout" data-lightbox title="<?= $this->transEsc('request_place_text') ?>"
-              href="<?= "$hold_url?od_id=$od_id&rec_id=$rec_id&action=checkoutConfirm" ?>">
-              <?= $this->transEsc('od_but_checkout') ?>
+            <a class="btn btn-primary checkout" data-lightbox title="<?=$this->transEsc('request_place_text')?>"
+              href="<?="$hold_url?od_id=" . urlencode($od_id) . "&rec_id=" . urlencode($rec_id) . "&action=checkoutConfirm"?>">
+              <?=$this->transEsc('od_but_checkout')?>
             </a>
           <p>
-          <?php endif ?>
-        <?php endif ?>
+          <?php endif; ?>
+        <?php endif; ?>
         <?php if (!$checkedOut && !$hold): ?>
-          <?php if (isset($avail->data->copiesAvailable) && $avail->data->copiesAvailable == 0): ?>
+          <?php if (($avail->data->copiesAvailable ?? 0) == 0): ?>
           <p>
-            <a class="btn btn-primary placehold" data-lightbox title="<?= $this->transEsc('request_place_texts') ?>"
-              href="<?= "$hold_url?od_id=$od_id&rec_id=$rec_id&action=holdConfirm" ?>">
-              <?= $this->icon('place-hold', 'icon-link__icon') ?>
-              <?= $this->transEsc('od_but_hold') ?>
+            <a class="btn btn-primary placehold" data-lightbox title="<?=$this->transEsc('request_place_texts')?>"
+              href="<?="$hold_url?od_id=" . urlencode($od_id) . "&rec_id=" . urlencode($rec_id) . "&action=holdConfirm"?>">
+              <?=$this->icon('place-hold', 'icon-link__icon')?>
+              <?=$this->transEsc('od_but_hold')?>
             </a>
           </p>
-        <?php endif ?>
-      <?php endif ?>
+        <?php endif; ?>
+      <?php endif; ?>
 
       <?php
       if ($checkedOut):
@@ -81,26 +81,26 @@
               $od_id = $title->reserveId; ?>
               <div class="panel-heading">
                 <h3 class="panel-title">
-                  <?=$this->translate('Issue') . ': ' . $title->metadata->edition ?>
+                  <?=$this->translate('Issue') . ': ' . $title->metadata->edition?>
                 </h3>
               </div>
             <?php endif; ?>
 
             <div class="panel-body">
-              <?= $this->transEsc('od_is_checkedout', ['%%due_date%%' => $title->expires]) ?>
+              <?=$this->transEsc('od_is_checkedout', ['%%due_date%%' => $title->expires])?>
             </div>
             <div class="panel-footer">
-              <a class="btn btn-success getTitle" data-lightbox title="<?= $this->transEsc('od_but_gettitle') ?>"
-                href="<?= "$hold_url?od_id=$od_id&rec_id=$rec_id&action=getTitle" ?>">
-                <?= $this->icon('overdrive-download', 'icon-link__icon') ?>
-                <?= $this->transEsc('od_but_gettitle') ?>
+              <a class="btn btn-success getTitle" data-lightbox title="<?=$this->transEsc('od_but_gettitle')?>"
+                href="<?="$hold_url?od_id=" . urlencode($od_id) . "&rec_id=" . urlencode($rec_id) . "&action=getTitle"?>">
+                <?=$this->icon('overdrive-download', 'icon-link__icon')?>
+                <?=$this->transEsc('od_but_gettitle')?>
               </a>
 
               <?php if ($title->isReturnable): ?>
                 <a class="btn btn-warning returnTitle" data-lightbox title='{$this->transEsc("od_but_return")}'
-                  href="<?= "$hold_url?od_id=$od_id&rec_id=$rec_id&action=returnTitleConfirm" ?>">
-                  <?= $this->icon('overdrive-return', 'icon-link__icon') ?>
-                  <?= $this->transEsc('od_but_return') ?>
+                  href="<?="$hold_url?od_id=" . urlencode($od_id) . "&rec_id=" . urlencode($rec_id) . "&action=returnTitleConfirm"?>">
+                  <?=$this->icon('overdrive-return', 'icon-link__icon')?>
+                  <?=$this->transEsc('od_but_return')?>
                 </a>
               <?php endif; ?>
             </div>
@@ -110,65 +110,65 @@
       <?php elseif ($hold): ?>
         <div class="panel panel-info">
           <div class="panel-body">
-            <?= $this->transEsc('od_is_on_hold') ?>
+            <?=$this->transEsc('od_is_on_hold')?>
             <?php if ($hold->holdReadyForCheckout): ?>
               <br />
-              <?= $this->transEsc('od_hold_now_avail', ['%%expireDate%%' => $hold->holdExpires]) ?>
+              <?=$this->transEsc('od_hold_now_avail', ['%%expireDate%%' => $hold->holdExpires])?>
             <?php else: ?>
-              <?= $this->transEsc('od_hold_queue', ['%%holdPosition%%' => $hold->holdListPosition, '%%numberOfHolds%%' => $hold->numberOfHolds]) ?>
+              <?=$this->transEsc('od_hold_queue', ['%%holdPosition%%' => $hold->holdListPosition, '%%numberOfHolds%%' => $hold->numberOfHolds])?>
             <?php endif; ?>
 
-            <?php if (isset($hold->holdSuspension)): ?>
+            <?php if ($hold->holdSuspension ?? 0): ?>
               <br />
               <?php if ($hold->holdSuspension->suspensionType == 'limited'): ?>
-                <?= $this->transEsc('od_hold_redelivery', ['%%days%%' => $hold->holdSuspension->numberOfDays]) ?>
+                <?=$this->transEsc('od_hold_redelivery', ['%%days%%' => $hold->holdSuspension->numberOfDays])?>
               <?php else: ?>
-                <?= $this->transEsc('od_hold_susp_indef') ?>
+                <?=$this->transEsc('od_hold_susp_indef')?>
               <?php endif; ?>
             <?php endif; ?>
           </div>
 
           <div class="panel-footer">
             <?php if ($hold->holdReadyForCheckout): ?>
-              <a class="btn btn-primary checkout" data-lightbox title="<?= $this->transEsc('request_place_text') ?>"
-                href="<?= "$hold_url?od_id=$od_id&rec_id=$rec_id&action=checkoutConfirm" ?>">
-                <?= $this->icon('overdrive-checkout', 'icon-link__icon') ?>
-                <?= $this->transEsc('od_but_checkout') ?>
+              <a class="btn btn-primary checkout" data-lightbox title="<?=$this->transEsc('request_place_text')?>"
+                href="<?="$hold_url?od_id=" . urlencode($od_id) . "&rec_id=" . urlencode($rec_id) . "&action=checkoutConfirm"?>">
+                <?=$this->icon('overdrive-checkout', 'icon-link__icon')?>
+                <?=$this->transEsc('od_but_checkout')?>
               </a>
             <?php endif; ?>
             <div class="btn-group">
               <button class="btn btn-primary " type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="true">
-                <?= $this->transEsc('od_but_edit_hold') ?> <span class="caret"></span>
+                <?=$this->transEsc('od_but_edit_hold')?> <span class="caret"></span>
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li><a class="cancelhold" data-lightbox title="<?= $this->transEsc('od_but_cancel_hold') ?>"
-                    href="<?= "$hold_url?od_id=$od_id&rec_id=$rec_id&action=cancelHoldConfirm" ?>">
-                    <?= $this->icon('overdrive-cancel-hold', 'icon-link__icon') ?>
-                    <?= $this->transEsc('od_but_cancel_hold') ?>
+                <li><a class="cancelhold" data-lightbox title="<?=$this->transEsc('od_but_cancel_hold')?>"
+                    href="<?="$hold_url?od_id=" . urlencode($od_id) . "&rec_id=" . urlencode($rec_id) . "&action=cancelHoldConfirm"?>">
+                    <?=$this->icon('overdrive-cancel-hold', 'icon-link__icon')?>
+                    <?=$this->transEsc('od_but_cancel_hold')?>
                   </a>
                 </li>
 
                 <li><a class="editEmail" data-lightbox title="<?=$this->transEsc('edit_hold_email')?>"
-                    href="<?= "$hold_url?od_id=$od_id&rec_id=$rec_id&action=editHoldEmailConfirm" ?>">
-                    <?= $this->icon('overdrive-edit-hold', 'icon-link__icon') ?>
-                    <?= $this->transEsc('od_edit_hold_email') ?>
+                    href="<?="$hold_url?od_id=" . urlencode($od_id) . "&rec_id=" . urlencode($rec_id) . "&action=editHoldEmailConfirm"?>">
+                    <?=$this->icon('overdrive-edit-hold', 'icon-link__icon')?>
+                    <?=$this->transEsc('od_edit_hold_email')?>
                   </a>
                 </li>
 
-                <?php //user already has a hold suspension.  allow them to edit the suspension
-                    if (isset($hold->holdSuspension)): ?>
-                  <li><a class="edithold" data-lightbox title="<?= $this->transEsc('od_susp_hold_edit') ?>"
-                      href="<?= "$hold_url?od_id=$od_id&rec_id=$rec_id&action=editHoldConfirm" ?>">
-                      <?= $this->icon('overdrive-edit-hold-suspension', 'icon-link__icon') ?>
-                      <?= $this->transEsc('od_but_edit_hold') ?>
+                <?php // user already has a hold suspension.  allow them to edit the suspension
+                    if ($hold->holdSuspension ?? 0): ?>
+                  <li><a class="edithold" data-lightbox title="<?=$this->transEsc('od_susp_hold_edit')?>"
+                      href="<?="$hold_url?od_id=" . urlencode($od_id) . "&rec_id=" . urlencode($rec_id) . "&action=editHoldConfirm"?>">
+                      <?=$this->icon('overdrive-edit-hold-suspension', 'icon-link__icon')?>
+                      <?=$this->transEsc('od_but_edit_hold')?>
                     </a>
                   </li>
                 <?php else: ?>
-                  <li><a class="susphold" data-lightbox title="<?= $this->transEsc('od_susp_hold') ?>"
-                      href="<?= "$hold_url?od_id=$od_id&rec_id=$rec_id&action=suspHoldConfirm" ?>">
-                      <?= $this->icon('overdrive-suspend-hold', 'icon-link__icon') ?>
-                      <?= $this->transEsc('od_but_susp_hold') ?>
+                  <li><a class="susphold" data-lightbox title="<?=$this->transEsc('od_susp_hold')?>"
+                      href="<?="$hold_url?od_id=" . urlencode($od_id) . "&rec_id=" . urlencode($rec_id) . "&action=suspHoldConfirm"?>">
+                      <?=$this->icon('overdrive-suspend-hold', 'icon-link__icon')?>
+                      <?=$this->transEsc('od_but_susp_hold')?>
                     </a>
                   </li>
                 <?php endif; ?>
@@ -176,7 +176,7 @@
             </div>
           </div>
         </div>
-      <?php endif ?>
+      <?php endif; ?>
     </div>
   </div>
 <?php endif; //end account issues check ?>
