--- a/themes/bootstrap3/templates/RecordDriver/SolrOverdrive/hold.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/SolrOverdrive/hold.phtml
@@ -224,7 +224,7 @@
             <div class="odformats">
                 <a class="btn btn-primary getTitle"
                       data-lightbox title="<?=$this->transEscAttr('od_but_gettitle')?>"
-                      href="<?=$this->url('overdrive-hold') . "?od_id=" . urlencode($od_id) . "&rec_id=" . urlencode($rec_id) . "&action=getTitle"?>">
+                      href="<?=$this->url('overdrive-hold') . '?od_id=' . urlencode($od_id) . '&rec_id=' . urlencode($rec_id) . '&action=getTitle'?>">
                       <i class="fa fa-fw fa-download" aria-hidden="true"></i>
                       <?=$this->transEsc('od_but_gettitle')?></a>
             </div>
